# optimisation-of-tsp-project1

./: .gitignore  CMakeLists.txt  README.md
config/: config.json
data/: matrix_11x11.atsp  matrix_6x6.atsp  matrix_8x8.atsp
include/: Algorithm.h  AlgorithmManager.h  BruteForceAlgorithm.h  ConfigParser.h  FileParser.h  Matrix.h  MatrixGenerator.h  NearestNeighborAlgorithm.h  RandomAlgorithm.h
results/: brute-force-10as.csv  brute-force-10s.csv  brute-force-11as.csv  brute-force-11s.csv  brute-force-5as.csv  brute-force-5s.csv  brute-force-6as.csv  brute-force-6s.csv  brute-force-7as.csv  brute-force-7s.csv  brute-force-8as.csv  brute-force-8s.csv  brute-force-9as.csv  brute-force-9s.csv  neighbor-10as.csv  neighbor-10s.csv  neighbor-11as.csv  neighbor-11s.csv  neighbor-5as.csv  neighbor-5s.csv  neighbor-6as.csv  neighbor-6s.csv  neighbor-7as.csv  neighbor-7s.csv  neighbor-8as.csv  neighbor-8s.csv  neighbor-9as.csv  neighbor-9s.csv  random-10as.csv  random-10s.csv  random-11as.csv  random-11s.csv  random-5as.csv  random-5s.csv  random-6as.csv  random-6s.csv  random-7as.csv  random-7s.csv  random-8as.csv  random-8s.csv  (+3 more)
src/: main.cpp
src/algorithms/: AlgorithmManager.cpp  BruteForceAlgorithm.cpp  NearestNeighborAlgorithm.cpp  RandomAlgorithm.cpp
src/parsers/: ConfigParser.cpp  FileParser.cpp
src/structures/: Matrix.cpp  MatrixGenerator.cpp
